--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,8 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# macOS files 
+.DS_Store
+reduction_scripts/.DS_Store
+reduction_scripts/extra_tools/.DS_Store
