Pipeline running automatically with just one script up to data cubes  (#29)
* Data reduction in 1 script reduce_data.py for both blue and red arms. Implemented the data classification in data_classifier.py, previously done in generate_metadata.py. Also creates the directories for reduced data. Built 2 .json templates with the DRP setup parameters. Updated steps.py accordingly and .gitignore. Removed a few defunct scripts.

* Script data_classifier.py moved to src directory. Steps.py info updated.

* Updated .json, now there is one .json for each observing mode. In reduce_data.py there is now a check of the observing mode to choose automatically the .json file

* Steps.py and README.md info updated.

* README.md typo fixed (main branch is master).

* Removed save_blue/red_metadata.py files

* Fix merge

* Updated README.md with the pipeline new structure and steps. Updated .gitignore to not track data folders. Removed steps.py.

* README.md updated with very minor changes.

* Removed a few empty lines after importing modules in src/data_classifier.py.

* Fixed calib_prefix as calib_prefix = os.path.join(out_dir, wifes_+arm) in reduction_scripts/reduce_data.py so it now takes into account the arm.

* Refactored is_nodshuffle and is_halfframe in src/pywifes.py

* Cleaned a bit reduction_scripts/reduce_data.py by renaming variables, removing coments and empty lines, and reformatting

* Updated run_cube_gen in reduction_scripts/reduce_data.py to consider interpolations both both arms. Also some clean ups in the same script.

* Removed coments and updated clobber to overwrite in reduction_scripts/reduce_data.py.

* Removed multithread variable in reduction_scripts/reduce_data.py.

* Renamed variable sci_im to sci_filename in reduction_scripts/reduce_data.py.

* Updated classify function to avoid sys.argv in src/data_classifier.py and in reduction_scripts/reduce_data.py. Added back #! /usr/bin/env python to reduce_data.py

* Updated cond

--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,8 @@ docs/_build/
 # PyBuilder
 target/
 
-# macOS files 
+# MacOS files
 .DS_Store
 reduction_scripts/.DS_Store
 reduction_scripts/extra_tools/.DS_Store
+
