--- a/reduction_scripts/pipeline_params/red/params_R7000.json5
+++ b/reduction_scripts/pipeline_params/red/params_R7000.json5
@@ -257,7 +257,7 @@
             "run": true,
             "suffix": null,
             "args": {
-                "source": "dome"
+                "source": "dome",
                 //
                 // Treatment of NaN values in data.
                 // Options:
@@ -275,7 +275,7 @@
             "run": true,
             "suffix": null,
             "args": {
-                "source": "twi"
+                "source": "twi",
                 //
                 // Treatment of NaN values in data.
                 // Options:
@@ -293,7 +293,7 @@
             "run": true,
             "suffix": null,
             "args": {
-                "source": "wire"
+                "source": "wire",
                 //
                 // Treatment of NaN values in data.
                 // Options:
@@ -311,7 +311,7 @@
             "run": true,
             "suffix": null,
             "args": {
-                "source": "arc"
+                "source": "arc",
                 //
                 // Treatment of NaN values in data.
                 // Options:
@@ -410,7 +410,6 @@
                 // - "mode": "dome",  // Determine system response only from dome flat.
                 //
                 // - "zero_var": true,  // Set the VAR extension values to zero in the output MEF.
-                // - "polydeg": 7,  // Order of polynomial used in fitting wavelength profile of dome flat (in log-flux).
                 // - "resp_min": 1.0e-4,  // Minimum value allowed in final flatfield.
                 //
                 // Additional user options.
