improve sensitivity curve, cube association, and source extraction

--- a/reduction_scripts/pipeline_params/blue/params_B3000.json5
+++ b/reduction_scripts/pipeline_params/blue/params_B3000.json5
@@ -486,8 +486,8 @@
                 "type": "flux",
                 // - "extract_radius": 5.0,  // Radius (arcseconds) within which to sum standard star flux.
                 // - "sky_radius": 8.0,  // Radius (arcseconds) outside of which to determine median sky.
-                // - "xtrim": 4,  // Number of x-axis spaxels to exclude from each side when peak-finding.
-                // - "ytrim": 8,  // Number of (unbinned) y-axis spaxels to exclude from each side when peak-finding.
+                // - "xtrim": 2,  // Number of x-axis spaxels to exclude from each side when peak-finding.
+                // - "ytrim": 4,  // Number of (unbinned) y-axis spaxels to exclude from each side when peak-finding.
                 // - "wmask": 500,  // Number of wavelength pixels at each end to mask when peak-finding
                 //
                 // Additional user options.
@@ -502,8 +502,8 @@
             "args": {
                 // Methods to fit ratio of observed-to-reference flux (in magnitude units) vs. wavelength.
                 // Options:
-                // - "method": "poly",  // Default. Use polynomial fit, mask outliers, interpolate over masked pixels with polynomial.
-                "method": "smooth_SG",  // Use Savitzky-Golay filter. Interpolate over high pixels and telluric regions with polynomial, smooth with S-G, mask outliers, boxcar-smooth, S-G smooth again, and interpolate onto desired wavelength grid.
+                "method": "poly",  // Default. Use polynomial fit, mask outliers, interpolate over masked pixels with polynomial.
+                // - "method": "smooth_SG",  // Use Savitzky-Golay filter. Interpolate over high pixels and telluric regions with polynomial, smooth with S-G, mask outliers, boxcar-smooth, S-G smooth again, and interpolate onto desired wavelength grid.
                 //
                 "polydeg": 25,  // Order of polynomial for fitting (used for both methods).
                 "excise_cut": 0.005,  // Fractional threshold for outliers (applied to magnitude units). Overridden with 0.003 if method = "smooth_SG".
@@ -511,12 +511,14 @@
                 "norm_stars": true,  // Recentre midpoint flux ratios at the minimum (in magnitude units) across all input standards.
                 // - "wave_min": None,  // Minimum wavelength to compute flux ratio. If None, defaults to minimum observed wavelength.
                 // - "wave_max": None,  // Maximum wavelength to compute flux ratio. If None, defaults to maximum observed wavelength.
-                // - "ytrim": 5,  // If standard star spectrum not previously extracted, mask this number of (unbinned) y-axis pixels when peak-finding.
+                // - "ytrim": 4,  // If standard star spectrum not previously extracted, mask this number of (unbinned) y-axis pixels when peak-finding.
+                "prefactor": true,  // Whether to remove the flatfield shape to ease fitting of sensitivity curve.
                 //
                 // Additional user options.
                 "plot_stars": true,
                 "plot_sensf": true,
                 // - "plot_name": "flux_calibration_solution.png",
+                // - "interactive_plot": false,
                 // - "debug": false,
                 }
         },
