--- a/reduction_scripts/pipeline_params/red/params_R3000.json5
+++ b/reduction_scripts/pipeline_params/red/params_R3000.json5
@@ -488,8 +488,8 @@
                 "type": "flux",
                 // - "extract_radius": 5.0,  // Radius (arcseconds) within which to sum standard star flux.
                 // - "sky_radius": 8.0,  // Radius (arcseconds) outside of which to determine median sky.
-                // - "xtrim": 4,  // Number of x-axis spaxels to exclude from each side when peak-finding.
-                // - "ytrim": 8,  // Number of (unbinned) y-axis spaxels to exclude from each side when peak-finding.
+                // - "xtrim": 2,  // Number of x-axis spaxels to exclude from each side when peak-finding.
+                // - "ytrim": 4,  // Number of (unbinned) y-axis spaxels to exclude from each side when peak-finding.
                 // - "wmask": 500,  // Number of wavelength pixels at each end to mask when peak-finding
                 //
                 // Additional user options.
@@ -504,21 +504,23 @@
             "args": {
                 // Method to fit ratio of observed-to-reference flux (in magnitude units) vs. wavelength.
                 // Options:
-                "method": "smooth_SG",  // Use Savitzky-Golay filter. Interpolate over high pixels and telluric regions with polynomial, smooth with S-G, mask outliers, boxcar-smooth, S-G smooth again, and interpolate onto desired wavelength grid.
-                // - "method": "poly",  // Default. Use polynomial fit, mask outliers, interpolate over masked pixels with polynomial.
+                "method": "poly",  // Default. Use polynomial fit, mask outliers, interpolate over masked pixels with polynomial.
+                // - "method": "smooth_SG",  // Use Savitzky-Golay filter. Interpolate over high pixels and telluric regions with polynomial, smooth with S-G, mask outliers, boxcar-smooth, S-G smooth again, and interpolate onto desired wavelength grid.
                 //
-                "polydeg": 10,  // Order of polynomial for fitting (used for both methods).
+                // - "polydeg": 30,  // Order of polynomial for fitting (used for both methods).
                 // - "excise_cut": 0.5,  // Fractional threshold for outliers (applied to magnitude units). Overridden with 0.003 if method = "smooth_SG".
                 "boxcar": 10,  // Boxcar smoothing length for method = "smooth_SG".
                 "norm_stars": true,  // Recentre midpoint flux ratios at the minimum (in magnitude units) across all input standards.
                 // - "wave_min": None,  // Minimum wavelength to compute flux ratio. If None, defaults to minimum observed wavelength.
                 // - "wave_max": None,  // Maximum wavelength to compute flux ratio. If None, defaults to maximum observed wavelength.
-                // - "ytrim": 5,  // If standard star spectrum not previously extracted, mask this number of (unbinned) y-axis pixels when peak-finding.
+                // - "ytrim": 4,  // If standard star spectrum not previously extracted, mask this number of (unbinned) y-axis pixels when peak-finding.
+                "prefactor": true,  // Whether to remove the flatfield shape to ease fitting of sensitivity curve.
                 //
                 // Additional user options.
                 "plot_stars": true,
                 "plot_sensf": true,
                 // - "plot_name": "flux_calibration_solution.png",
+                // - "interactive_plot": false,
                 // - "debug": false,
                 }
         },
@@ -544,8 +546,8 @@
                 "type": "telluric",
                 // - "extract_radius": 5.0,  // Radius (arcseconds) within which to sum standard star flux.
                 // - "sky_radius": 8.0,  // Radius (arcseconds) outside of which to determine median sky.
-                // - "xtrim": 4,  // Number of x-axis spaxels to exclude from each edge when peak-finding.
-                // - "ytrim": 8,  // Number of (unbinned) y-axis spaxels to exclude from each edge when peak-finding.
+                // - "xtrim": 2,  // Number of x-axis spaxels to exclude from each edge when peak-finding.
+                // - "ytrim": 4,  // Number of (unbinned) y-axis spaxels to exclude from each edge when peak-finding.
                 // - "wmask": 500,  // Number of wavelength pixels at each end to mask when peak-finding
                 //
                 // Additional user options.
@@ -564,12 +566,12 @@
                 // - "fit_wmax": 10000.0,  // Maximum wavelength in which to fit telluric correction.
                 // - "H2O_power": 0.72,  // H2O line corrections are scaled to the power (1/airmass^H2O_power).
                 // - "O2_power": 0.40,  // O2 line corrections are scaled to the power (1/airmass^O2_power).
-                // - "ytrim": 3,  // If standard star spectrum not previously extracted, mask this number of (unbinned) y-axis pixels when peak-finding.
+                // - "ytrim": 4,  // If standard star spectrum not previously extracted, mask this number of (unbinned) y-axis pixels when peak-finding.
                 //
                 // Additional user options.
                 "plot": true,
-                // - "plot_stars": false,
                 // - "save_prefix": "telluric",
+                // - "interactive_plot": false,
                 // - "debug": false,
                 }
         },
@@ -577,7 +579,12 @@
             "step": "telluric_corr",
             "run": true,
             "suffix": "10",
-            "args": {}
+            "args": {
+                // - "shift_sky": true,  // Whether to shift sky from telluric standard to match object sky lines.
+                //
+                // Additional user options.
+                // - "interactive_plot": false,
+            }
         },
         {
             "step": "save_3dcube",
