grating-based wavelength regions for matching telluric sky to object sky

--- a/reduction_scripts/pipeline_params/red/params_R3000.json5
+++ b/reduction_scripts/pipeline_params/red/params_R3000.json5
@@ -581,6 +581,8 @@
             "suffix": "10",
             "args": {
                 // - "shift_sky": true,  // Whether to shift sky from telluric standard to match object sky lines.
+                // - "sky_wmin": 7200.0,   // Minimum wavelength to fit if shifting based on sky lines.
+                // - "sky_wmin": 8100.0,   // Maximum wavelength to fit if shifting based on sky lines.
                 //
                 // Additional user options.
                 // - "interactive_plot": false,
