--- a/reduction_scripts/pipeline_params/red/params_R7000.json5
+++ b/reduction_scripts/pipeline_params/red/params_R7000.json5
@@ -582,6 +582,8 @@
             "suffix": "10",
             "args": {
                 // - "shift_sky": true,  // Whether to shift sky from telluric standard to match object sky lines.
+                "sky_wmin": 6355.0,   // Minimum wavelength to fit if shifting based on sky lines.
+                "sky_wmin": 6370.0,   // Maximum wavelength to fit if shifting based on sky lines.
                 //
                 // Additional user options.
                 // - "interactive_plot": false,
