--- a/src/pywifes/pipeline_params/blue/params_B7000.json5
+++ b/src/pywifes/pipeline_params/blue/params_B7000.json5
@@ -376,6 +376,7 @@
                 //
                 // Additional user options.
                 "plot": true,
+                // - "plot_slices": false,  // Whether to plot per-slice fits
                 "verbose": true,
             }
         },
