--- a/src/pywifes/pipeline_params/red/params_I7000.json5
+++ b/src/pywifes/pipeline_params/red/params_I7000.json5
@@ -379,6 +379,7 @@
                 //
                 // Additional user options.
                 "plot": true,
+                // - "plot_slices": false,  // Whether to plot per-slice fits
                 "verbose": true,
             }
         },
