--- a/src/pywifes/pipeline_params/blue/params_B3000.json5
+++ b/src/pywifes/pipeline_params/blue/params_B3000.json5
@@ -465,6 +465,7 @@
                 "wmin_set": 3200.0,  // Minimum wavelength of output cube.
                 "wmax_set": 5900.0,  // Maximum wavelength of output cube.
                 // - "dw_set": None,  // If None, output cube wavelength step is set to mean of per-slitlet mean wavelength steps.
+                // - "wavelength_ref": "AIR",  // Wavelength reference ("AIR" or "VACUUM").
                 //
                 "adr": true,  // Apply atmospheric differential refraction correction.
                 //
