--- a/src/pywifes/pipeline_params/red/params_R7000.json5
+++ b/src/pywifes/pipeline_params/red/params_R7000.json5
@@ -468,6 +468,7 @@
                 "wmin_set": 5294.0,  // Minimum wavelength of output cube.
                 "wmax_set": 7060.0,  // Maximum wavelength of output cube.
                 // - "dw_set": None,  // If None, output cube wavelength step is set to mean of per-slitlet mean wavelength steps.
+                // - "wavelength_ref": "AIR",  // Wavelength reference ("AIR" or "VACUUM").
                 //
                 "adr": true,  // Apply atmospheric differential refraction correction.
                 //
