--- a/src/pywifes/pipeline_params/red/params_I7000.json5
+++ b/src/pywifes/pipeline_params/red/params_I7000.json5
@@ -380,7 +380,7 @@
                 // Additional user options.
                 "plot": true,
                 // - "plot_slices": false,  // Whether to plot per-slice fits
-                "verbose": true,
+                // - "verbose": false,
             }
         },
         {
