--- a/src/pywifes/pipeline_params/blue/params_B3000.json5
+++ b/src/pywifes/pipeline_params/blue/params_B3000.json5
@@ -377,7 +377,7 @@
                 // Additional user options.
                 "plot": true,
                 // - "plot_slices": false,  // Whether to plot per-slice fits
-                "verbose": true,
+                // - "verbose": false,
             }
         },
         {
