--- a/src/pywifes/pipeline_params/params_extract.json5
+++ b/src/pywifes/pipeline_params/params_extract.json5
@@ -1,5 +1,8 @@
 
 {
+    // All parameters must be specified. No defaults.
+    "npeaks": 3,  // Maximum number of sources to extract (in order of decreasing brightness).
+    "sigma_threshold": 3,  // Number of sigma a source must be above the background to be detected.
     "r_arcsec": 2,  // Source extraction radius (in arcseconds). Sky annulus is between 3 and 4 * r_arcsec.
     "border_width": 2,  // Number of edge spaxels to omit when peak-finding and defining colourbar range for output plots.
     "plot": true,  // Create output plots.
