Update standard stars to Nov 2024 CALSPEC, update std star treatment, improve coadd handling, bugfixes

--- a/src/pywifes/pipeline_params/blue/params_B7000.json5
+++ b/src/pywifes/pipeline_params/blue/params_B7000.json5
@@ -537,7 +537,7 @@
                 // - "mode": "iraf",  // FITS image format for input flux calibration file.
                 //
                 // Additional user options.
-                // - "interactive_plot": false,
+                // - "extinction_fn": null, // Extinction file path containing the extinction curve information. If null (None), defaults to standard SSO extinction curve.
             }
         },
         {
